RANGER-4076: Document update for required environment variable